[tool.poetry]
name = "slack"
version = "0.1.0"
description = ""
authors = ["Rodrigo López Dato <rodrigo.lopezdato@flagsmith.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
slack-sdk = "^3.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
